# leaderboards

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  task_config.yaml
configs/: danish.yaml  english.yaml  faroese.yaml  german.yaml  task_metrics.yaml
leaderboard_configs/: dutch.yaml  european.yaml  finnish.yaml  french.yaml  german.yaml  germanic.yaml  icelandic.yaml  italian.yaml  mainland_scandinavian.yaml  norwegian.yaml  romance.yaml  spanish.yaml  swedish.yaml
leaderboards/: danish.csv  danish.json  danish_all.csv  danish_all.json  danish_all_simplified.csv  danish_nlu.csv  danish_nlu.json  danish_nlu_simplified.csv  dutch.csv  dutch.json  dutch_all.csv  dutch_all.json  dutch_all_simplified.csv  dutch_nlu.csv  dutch_nlu.json  dutch_nlu_simplified.csv  english.csv  english.json  english_all.csv  english_all.json  english_all_simplified.csv  english_nlu.csv  english_nlu.json  english_nlu_simplified.csv  european.csv  european.json  european_all.csv  european_all.json  european_all_simplified.csv  european_nlu.csv  european_nlu.json  european_nlu_simplified.csv  faroese.csv  faroese_all.csv  faroese_all.json  faroese_all_simplified.csv  faroese_nlu.csv  faroese_nlu.json  faroese_nlu_simplified.csv  finnish_all.csv  (+75 more)
notebooks/: language-spider-plots.ipynb
src/: generate_leaderboards.py  link_generation.py  process_results.py
