[project]
name = "leaderboards"
version = "0.1.0"
description = "Collection of all evaluation results from the EuroEval framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "click>=8.1.7",
    "google-genai>=1.9.0",
    "huggingface-hub>=0.26.5",
    "jupyterlab>=4.4.0",
    "mypy>=1.13.0",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "plotly>=6.0.1",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "wheel>=0.45.1",
]
